# shab-perma-scoop-api

./: .dockerignore  .gitignore  Dockerfile.ecs  README.md  docker-compose.override.yml  docker-compose.yml  example.env  make_celery.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: lint.yml  test-and-build.yml
docker/: Dockerfile  cleanup-crontab  docker-entrypoint.sh
scoop_rest_api/: __init__.py  config.py  conftest.py  tasks.py
scoop_rest_api/commands/: __init__.py  cancel_access_key.py  cleanup.py  create_access_key.py  create_tables.py  inspect_capture.py  status.py
scoop_rest_api/models/: __init__.py  access_key.py  capture.py
scoop_rest_api/tests/commands/: test_cancel_access_key.py  test_cleanup.py  test_create_access_key.py  test_inspect_capture.py  test_status.py
scoop_rest_api/tests/tasks/: test_start_capture_process_task.py
scoop_rest_api/tests/utils/: test_validation_helpers.py
scoop_rest_api/tests/views/: test_artifact.py  test_capture.py  test_validate.py
scoop_rest_api/utils/: __init__.py  access_check.py  capture_to_dict.py  check_proxy_port.py  config_check.py  get_custom_agents.py  get_db.py  scoop_runner.py  validation_helpers.py
scoop_rest_api/views/: __init__.py  artifact.py  capture.py  validate.py
